--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^11.1.1",
+    "@angular/cdk": "^11.1.1",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
-    "@angular/forms": "~10.0.0",
+    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/forms": "^10.0.14",
+    "@angular/material": "^11.1.1",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
@@ -29,7 +33,7 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular-devkit/build-angular": "^0.1101.2",
     "@angular/cli": "~10.0.5",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
