--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.4",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/navigation-bar": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
+    "ionic2-super-tabs": "^5.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
