--- a/angular.json
+++ b/angular.json
@@ -50,11 +50,8 @@
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": false,
-                            <<
-                            << << < HEAD "extractCss": true,
-                            ===
-                            === = >>>
-                            >>> > 5831 dd3e7036d35a3c7bca27167a93f83e60562e "namedChunks": false,
+                            "extractCss": true,
+                            "namedChunks": false,
                             "aot": true,
                             "extractLicenses": true,
                             "vendorChunk": false,
